force-app/main/default/objects/Agentforce_Activity__c/Agentforce_Activity__c.object-meta.xml
<CustomObject>
    <description>Tracks customer engagement activities from Agentforce chat and Experience Cloud page components</description>
    <label>Agentforce Activity</label>
    <nameField>
        <displayFormat>AF-{0000000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agentforce Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>