force-app/main/default/objects/Agentforce_Activity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated contact if identified</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agentforce Activities</relationshipLabel>
    <relationshipName>Agentforce_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>