force-app/main/default/objects/Agentforce_Activity__c/fields/Event_Count__c.field-meta.xml
<CustomField>
    <fullName>Event_Count__c</fullName>
    <description>Total number of events logged during the session</description>
    <label>Event Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>