force-app/main/default/objects/Agentforce_Activity__c/fields/Event_Data__c.field-meta.xml
<CustomField>
    <fullName>Event_Data__c</fullName>
    <description>JSON payload containing event-specific context data</description>
    <label>Event Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>