force-app/main/default/objects/Agentforce_Activity__c/fields/Event_Source__c.field-meta.xml
<CustomField>
    <fullName>Event_Source__c</fullName>
    <description>Which LWC component triggered the event</description>
    <label>Event Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>