force-app/main/default/objects/Agentforce_Activity__c/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <description>When the event occurred</description>
    <label>Event Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>