force-app/main/default/objects/Agentforce_Activity__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of activity event being logged</description>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Session_Started</fullName>
                <label>Session Started</label>
            </value>
            <value>
                <fullName>Session_Ended</fullName>
                <label>Session Ended</label>
            </value>
            <value>
                <fullName>Link_Click</fullName>
                <label>Link Click</label>
            </value>
            <value>
                <fullName>Form_Submit</fullName>
                <label>Form Submit</label>
            </value>
            <value>
                <fullName>Message_Sent</fullName>
                <label>Message Sent</label>
            </value>
            <value>
                <fullName>Message_Received</fullName>
                <label>Message Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>