force-app/main/default/objects/Agentforce_Activity__c/fields/Message_Count__c.field-meta.xml
<CustomField>
    <fullName>Message_Count__c</fullName>
    <description>Running count of messages exchanged in the session</description>
    <label>Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>