force-app/main/default/objects/Agentforce_Activity__c/fields/Messaging_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session_Id__c</fullName>
    <description>Foreign key to the MessagingSession record</description>
    <externalId>true</externalId>
    <label>Messaging Session Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>