force-app/main/default/objects/Agentforce_Activity__c/fields/Session_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_End_Time__c</fullName>
    <description>Timestamp when the chat session ended</description>
    <label>Session End Time</label>
    <type>DateTime</type>
</CustomField>