force-app/main/default/objects/Agentforce_Activity__c/fields/Time_In_Chat__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Chat__c</fullName>
    <description>Seconds elapsed since session start</description>
    <label>Time In Chat (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>