force-app/main/default/objects/Agentforce_Activity__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Logged-in user if authenticated</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Agentforce Activities</relationshipLabel>
    <relationshipName>Agentforce_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>